updated translation Time.from

--- a/theme/cte/localization/es/Texts.json
+++ b/theme/cte/localization/es/Texts.json
@@ -1,1 +1,172 @@
-{"Dons.Projet":"Tipo de Proyecto","Dons.Finance":"Proyecto financiado en un %pourcentage%%","Dons.Soutien":"Sostengo el proyecto","Dons.Recap":"Doy","Block.Dons.Donner":"Hacer un donativo","Block.Dons.Titre":"Mi donativo","Block.Dons.Condition":"Condición de mi donación","Block.Dons.Montant":"Importe de mi donación","Block.Dons.Mensuel":"Donativo mensual","Block.Dons.Mois":"\/ mes","Block.Dons.Trimestre":"\/ trimestre","Block.Dons.Trimestriel":"Donativo trimestral","Block.Dons.Cout":"Su donación solo le cuesta ","Block.Dons.Message":"Quiero añadir un mensaje à mi donativo","Block.Dons.ContactNational":"Contacto administrativo y fiscal en su país","PresDeChezToi.Titre":"","PresDeChezToi.Propositions":"","PresDeChezToi.Recherche":"","PresDeChezToi.Tous.Lieux":"","PresDeChezToi.Tous.Prop":"","PresDeChezToi.Tous.Rencontres":"","Inscriptions":"Inscripciones","Block.Inscription.Lui":"Él","Block.Inscription.Civilite.Monsieur":"","Block.Inscription.Civilite.Madame":"","Block.Inscription.Civilite.MonsieurOuMadame":"","Block.Inscription.Civilite.Mademoiselle":"","Block.Inscription.Civilite.Pere":"","Block.Inscription.Civilite.Soeur":"","Block.Inscription.Civilite.Frere":"","Block.Inscription.Elle":"Ella","Block.Inscription.Enfants":"Niños","Block.Inscription.Enfant":"Niño","Block.Inscription.Enfant.Supprimer":"Borrar","Block.Inscription.Enfant.Ajouter":"Añadir un niño","Block.Inscription.Enfant.Fille":"","Block.Inscription.Enfant.Garçon":"","Block.Inscription.Couple":"La pareja","Block.Inscription.VoirPlan":"Ver mapa","Block.Inscription.Statut.Libre":"Acceso libre, no hace falta inscripción.","Block.Inscription.Statut.Close":"Inscripciones cerradas","Block.Inscription.Statut.Ouvertes":"Inscripciones abiertas","Block.Inscription.Statut.Preinscription":"Preinscripción","Block.Inscription.Statut.Non":"No inscripción","Block.Inscription.Statut.Septembre":"Inscripciones abiertas a partir de mediados de septiembre","adolescent":"Joven 14-18 años","jeune-adulte":"Joven 18-30 años","couple":"Pareja","famille":"Familia","personne-avec-enfants":"Persona con niños","fiances":"Novios","adulte":"Individual","pretre":"","Block.Inscription.Attente.Ligne1":"La propuesta elegida esta complèta.","Block.Inscription.Attente.Ligne2":"Puede inscribirse en lista de espera.","Block.Inscription.Attente.Ligne3":"Los gastos de inscripción le serán pedidos con la confirmación de su inscripción.","Block.Inscription.Passee":"Propuesta pasada","Block.Inscription.Fiche":"Ficha de inscripción","Block.Inscription.InfosPerso":"Informaciones personales","Block.Inscription.Societe":"Empresa o institución","Block.Inscription.Nom":"Apellido","Block.Inscription.Nom.Different":"Apellido (si diferente)","Block.Inscription.Prenom":"Nombre","Block.Inscription.DateNaiss":"Fecha de nacimiento","Block.Inscription.DateFormat":"dd\/mm\/aaaa","Block.Inscription.Sexe":"Sexo","Block.Inscription.Sexe.H":"V","Block.Inscription.Sexe.F":"M","Block.Inscription.Nationalite":"Nacionalidad","Block.Inscription.Adresse":"Dirección","Block.Inscription.CodePostal":"Codigo postal","Block.Inscription.Ville":"Ciudad","Block.Inscription.Pays":"País","Block.Inscription.Classe":"Clase\/Estudios","Block.Inscription.Situation":"Situación","Block.Inscription.Situation.Etudiant":"Estudiante","Block.Inscription.Situation.JPro":"Joven profesional","Block.Inscription.Situation.Autre":"Otro","Block.Inscription.Profession":"Profesión","Block.Inscription.Contact":"Contacto","Block.Inscription.Email":"Correo electrónico","Block.Inscription.Email.Verification":"Correo electrónico (verificación)","Block.Inscription.Email.Error.Different":"","Block.Inscription.Email.Parent":"Correo electrónico de uno de los padres","Block.Inscription.Email.Parent.Verification":"Correo electrónico de uno de los padres (verificación)","Block.Inscription.Telephone":"Teléfono","Block.Inscription.Telephone.Placeholder":"+xx\/x xx xx xx xx","Block.Inscription.Telephone.Fixe":"Teléfono fijo","Block.Inscription.Telephone.Portable":"Teléfono móvil","Block.Inscription.Telephone.Portable.Parents":"Teléfono fijo (o móvil) de los padres","Block.Inscription.Telephone.Condition":"Es requerido uno de los teléfonos","Block.Inscription.Telephone.Condition.Ados":"El teléfono fijo o móvil de uno de los padres es necesari","Block.Inscription.Remarques":"Observaciones","Block.Inscription.Connu":"He conocido el sitio por:","Block.Inscription.Connu.Internet":"Internet","Block.Inscription.Connu.Tracts":"Folletos","Block.Inscription.Connu.Famille":"Familia\/amigos","Block.Inscription.SituationConjugale":"Situación conyugal:","Block.Inscription.SituationConjugale.Maries":"Casados","Block.Inscription.SituationConjugale.Fiances":"Novios","Block.Inscription.SituationConjugale.Autre":"Otro","Block.Inscription.SituationConjugale.Preciser":"Precise","Block.Inscription.Mariage":"Fecha de matrimonio:","Block.Inscription.Mariage.Fiances":"Fecha de matrimonio si la saben:","Block.Inscription.Fiances":"Proyecto de matrimonio","Block.Inscription.Inscrire.Service":"Inscribirse en el servicio","Block.Inscription.Paf":"Participación en los gastos:","Block.Inscription.Paf.Problemes":"El dinero no debe ser un obstáculo","Block.Inscription.Paf.Montant":"Importe","Block.Inscription.Paf.Maintenant":"Pago ahora","Block.Inscription.Paf.Maintenant.Rien":"Nada por ahora","Block.Inscription.Paf.Maintenant.Totalite":"","Block.Inscription.Paf.Maintenant.Partie":"","Block.Inscription.Paf.ModePaiment":"","Block.Inscription.Paf.carte":"por tarjeta","Block.Inscription.Paf.cheque":"por cheque","Block.Inscription.Paf.virement":"por transferencia","Block.Inscription.Paf.Virement.Period":"mediante transferencia bancaria periódica","Block.Inscription.Paf.Prelevement":"mediante transferencia bancaria periódica","Block.Inscription.Paf.Liquide":"","Block.Inscription.Entretien":"Será necesario tener una entrevista para confirmar su inscripción.","Block.Inscription.Motivation":"Para que la inscripción sea completa, gracias por enviar una carta de motivación à la dirección de la secretaría indicada más arriba.","Block.Inscription.Formulaire_":"Para que su inscripción sea completa, por favor imprimir y rellenar a mano el formulario complementario siguiente y enviarlo a la dirección de la secretaria indicada más arriba.","Block.Inscription.FormulaireEtMotiv":"Para que su inscripción sea completa, por favor escribir una carta de motivación, imprimir el formulario complementario siguiente, rellenarlo a mano et enviar esos dos documentos a la dirección de la secretaria indicada más arriba.","Block.Inscription.Succes":"Su inscripción ha sido registrada","Block.Inscription.PaimentComplementaire":"","Block.Inscription.PaimentComplementaire.Intro":"","Block.Inscription.PaimentComplementaire.Email":"","Block.Inscription.PaimentComplementaire.Email.Aucun":"","Block.Inscription.PaimentComplementaire.Email.Autre":"","Block.Inscription.Numero":"","Block.PaimentComplementaire.MontantPaye":"","Block.PaimentComplementaire.MontantAPayer":"","Block.PaimentComplementaire.Paf":"","Block.Paiment":"","Calendrier":"Calendario","Date":"Fecha","Proposition":"Propuesta","Block.Inscription.Inscrire.Comme":"Inscribirse como","Block.Inscription.Champs":"Gracias por rellenar todos los campos requeridos","date.from":"del","date.to":"al","Block.Inscription.Valider":"Inscribirse","Block.Actus.ReadMore":"Leer también :","Block.Inscription.Fiche.Service":"Ficha de inscripción en el servicio","Go.NFGWebsite":"","Block.Calendar.Passee":"Propuesta pasada","Block.Inscription.Formulaire.Complement":"","Block.Dons.Fini":"","Block.Dons.Website":"","Block.Inscription.Civilite":"","Block.Inscription.Paf.paypal":"","Block.Dons.Search.More":"","Block.Dons.Search.Less":"","Block.Calendar.Place":"","Block.Inscription.Paiment":"","Block.Dons.Success":"","Block.Inscription.Formulaire":"Para continuar su solicitud, le pedimos que complete el siguiente documento","Merci de nous retourner ce document, soit par mail (sessions@chemin-neuf.org), soit par la Poste ...":"Gracias por devolver este documento, ya sea por correo (%mail_inscription%), o por la Oficina de Correos (%adresse_postale_inscription%).","Demande_De_Reservation":"Solicitud de reserva","Arrivee":"llegada","Depart":"Partida","Groupe_Adultes_Nombre":"Para un grupo de adultos (número previsto)","Groupe_Jeunes_Nombre":"Para un grupo de jóvenes (número previsto)","Individuel_Nombre":"Venir en persona","Objet_Demande":"Especifique, en pocas palabras, el propósito de su solicitud","Block.Actus.Publier":"Publicado el "} 
+{
+	"Dons.Projet": "Tipo de Proyecto",
+	"Dons.Finance": "Proyecto financiado en un %pourcentage%%",
+	"Dons.Soutien": "Sostengo el proyecto",
+	"Dons.Recap": "Doy",
+	"Block.Dons.Donner": "Hacer un donativo",
+	"Block.Dons.Titre": "Mi donativo",
+	"Block.Dons.Condition": "Condición de mi donación",
+	"Block.Dons.Montant": "Importe de mi donación",
+	"Block.Dons.Mensuel": "Donativo mensual",
+	"Block.Dons.Mois": "/ mes",
+	"Block.Dons.Trimestre": "/ trimestre",
+	"Block.Dons.Trimestriel": "Donativo trimestral",
+	"Block.Dons.Cout": "Su donación solo le cuesta ",
+	"Block.Dons.Message": "Quiero añadir un mensaje à mi donativo",
+	"Block.Dons.ContactNational": "Contacto administrativo y fiscal en su país",
+	"PresDeChezToi.Titre": "",
+	"PresDeChezToi.Propositions": "",
+	"PresDeChezToi.Recherche": "",
+	"PresDeChezToi.Tous.Lieux": "",
+	"PresDeChezToi.Tous.Prop": "",
+	"PresDeChezToi.Tous.Rencontres": "",
+	"Inscriptions": "Inscripciones",
+	"Block.Inscription.Lui": "Él",
+	"Block.Inscription.Civilite.Monsieur": "",
+	"Block.Inscription.Civilite.Madame": "",
+	"Block.Inscription.Civilite.MonsieurOuMadame": "",
+	"Block.Inscription.Civilite.Mademoiselle": "",
+	"Block.Inscription.Civilite.Pere": "",
+	"Block.Inscription.Civilite.Soeur": "",
+	"Block.Inscription.Civilite.Frere": "",
+	"Block.Inscription.Elle": "Ella",
+	"Block.Inscription.Enfants": "Niños",
+	"Block.Inscription.Enfant": "Niño",
+	"Block.Inscription.Enfant.Supprimer": "Borrar",
+	"Block.Inscription.Enfant.Ajouter": "Añadir un niño",
+	"Block.Inscription.Enfant.Fille": "",
+	"Block.Inscription.Enfant.Garçon": "",
+	"Block.Inscription.Couple": "La pareja",
+	"Block.Inscription.VoirPlan": "Ver mapa",
+	"Block.Inscription.Statut.Libre": "Acceso libre, no hace falta inscripción.",
+	"Block.Inscription.Statut.Close": "Inscripciones cerradas",
+	"Block.Inscription.Statut.Ouvertes": "Inscripciones abiertas",
+	"Block.Inscription.Statut.Preinscription": "Preinscripción",
+	"Block.Inscription.Statut.Non": "No inscripción",
+	"Block.Inscription.Statut.Septembre": "Inscripciones abiertas a partir de mediados de septiembre",
+	"adolescent": "Joven 14-18 años",
+	"jeune-adulte": "Joven 18-30 años",
+	"couple": "Pareja",
+	"famille": "Familia",
+	"personne-avec-enfants": "Persona con niños",
+	"fiances": "Novios",
+	"adulte": "Individual",
+	"pretre": "",
+	"Block.Inscription.Attente.Ligne1": "La propuesta elegida esta complèta.",
+	"Block.Inscription.Attente.Ligne2": "Puede inscribirse en lista de espera.",
+	"Block.Inscription.Attente.Ligne3": "Los gastos de inscripción le serán pedidos con la confirmación de su inscripción.",
+	"Block.Inscription.Passee": "Propuesta pasada",
+	"Block.Inscription.Fiche": "Ficha de inscripción",
+	"Block.Inscription.InfosPerso": "Informaciones personales",
+	"Block.Inscription.Societe": "Empresa o institución",
+	"Block.Inscription.Nom": "Apellido",
+	"Block.Inscription.Nom.Different": "Apellido (si diferente)",
+	"Block.Inscription.Prenom": "Nombre",
+	"Block.Inscription.DateNaiss": "Fecha de nacimiento",
+	"Block.Inscription.DateFormat": "dd/mm/aaaa",
+	"Block.Inscription.Sexe": "Sexo",
+	"Block.Inscription.Sexe.H": "V",
+	"Block.Inscription.Sexe.F": "M",
+	"Block.Inscription.Nationalite": "Nacionalidad",
+	"Block.Inscription.Adresse": "Dirección",
+	"Block.Inscription.CodePostal": "Codigo postal",
+	"Block.Inscription.Ville": "Ciudad",
+	"Block.Inscription.Pays": "País",
+	"Block.Inscription.Classe": "Clase/Estudios",
+	"Block.Inscription.Situation": "Situación",
+	"Block.Inscription.Situation.Etudiant": "Estudiante",
+	"Block.Inscription.Situation.JPro": "Joven profesional",
+	"Block.Inscription.Situation.Autre": "Otro",
+	"Block.Inscription.Profession": "Profesión",
+	"Block.Inscription.Contact": "Contacto",
+	"Block.Inscription.Email": "Correo electrónico",
+	"Block.Inscription.Email.Verification": "Correo electrónico (verificación)",
+	"Block.Inscription.Email.Error.Different": "",
+	"Block.Inscription.Email.Parent": "Correo electrónico de uno de los padres",
+	"Block.Inscription.Email.Parent.Verification": "Correo electrónico de uno de los padres (verificación)",
+	"Block.Inscription.Telephone": "Teléfono",
+	"Block.Inscription.Telephone.Placeholder": "+xx/x xx xx xx xx",
+	"Block.Inscription.Telephone.Fixe": "Teléfono fijo",
+	"Block.Inscription.Telephone.Portable": "Teléfono móvil",
+	"Block.Inscription.Telephone.Portable.Parents": "Teléfono fijo (o móvil) de los padres",
+	"Block.Inscription.Telephone.Condition": "Es requerido uno de los teléfonos",
+	"Block.Inscription.Telephone.Condition.Ados": "El teléfono fijo o móvil de uno de los padres es necesari",
+	"Block.Inscription.Remarques": "Observaciones",
+	"Block.Inscription.Connu": "He conocido el sitio por:",
+	"Block.Inscription.Connu.Internet": "Internet",
+	"Block.Inscription.Connu.Tracts": "Folletos",
+	"Block.Inscription.Connu.Famille": "Familia/amigos",
+	"Block.Inscription.SituationConjugale": "Situación conyugal:",
+	"Block.Inscription.SituationConjugale.Maries": "Casados",
+	"Block.Inscription.SituationConjugale.Fiances": "Novios",
+	"Block.Inscription.SituationConjugale.Autre": "Otro",
+	"Block.Inscription.SituationConjugale.Preciser": "Precise",
+	"Block.Inscription.Mariage": "Fecha de matrimonio:",
+	"Block.Inscription.Mariage.Fiances": "Fecha de matrimonio si la saben:",
+	"Block.Inscription.Fiances": "Proyecto de matrimonio",
+	"Block.Inscription.Inscrire.Service": "Inscribirse en el servicio",
+	"Block.Inscription.Paf": "Participación en los gastos:",
+	"Block.Inscription.Paf.Problemes": "El dinero no debe ser un obstáculo",
+	"Block.Inscription.Paf.Montant": "Importe",
+	"Block.Inscription.Paf.Maintenant": "Pago ahora",
+	"Block.Inscription.Paf.Maintenant.Rien": "Nada por ahora",
+	"Block.Inscription.Paf.Maintenant.Totalite": "",
+	"Block.Inscription.Paf.Maintenant.Partie": "",
+	"Block.Inscription.Paf.ModePaiment": "",
+	"Block.Inscription.Paf.carte": "por tarjeta",
+	"Block.Inscription.Paf.cheque": "por cheque",
+	"Block.Inscription.Paf.virement": "por transferencia",
+	"Block.Inscription.Paf.Virement.Period": "mediante transferencia bancaria periódica",
+	"Block.Inscription.Paf.Prelevement": "mediante transferencia bancaria periódica",
+	"Block.Inscription.Paf.Liquide": "",
+	"Block.Inscription.Entretien": "Será necesario tener una entrevista para confirmar su inscripción.",
+	"Block.Inscription.Motivation": "Para que la inscripción sea completa, gracias por enviar una carta de motivación à la dirección de la secretaría indicada más arriba.",
+	"Block.Inscription.Formulaire_": "Para que su inscripción sea completa, por favor imprimir y rellenar a mano el formulario complementario siguiente y enviarlo a la dirección de la secretaria indicada más arriba.",
+	"Block.Inscription.FormulaireEtMotiv": "Para que su inscripción sea completa, por favor escribir una carta de motivación, imprimir el formulario complementario siguiente, rellenarlo a mano et enviar esos dos documentos a la dirección de la secretaria indicada más arriba.",
+	"Block.Inscription.Succes": "Su inscripción ha sido registrada",
+	"Block.Inscription.PaimentComplementaire": "",
+	"Block.Inscription.PaimentComplementaire.Intro": "",
+	"Block.Inscription.PaimentComplementaire.Email": "",
+	"Block.Inscription.PaimentComplementaire.Email.Aucun": "",
+	"Block.Inscription.PaimentComplementaire.Email.Autre": "",
+	"Block.Inscription.Numero": "",
+	"Block.PaimentComplementaire.MontantPaye": "",
+	"Block.PaimentComplementaire.MontantAPayer": "",
+	"Block.PaimentComplementaire.Paf": "",
+	"Block.Paiment": "",
+	"Calendrier": "Calendario",
+	"Date": "Fecha",
+	"Proposition": "Propuesta",
+	"Block.Inscription.Inscrire.Comme": "Inscribirse como",
+	"Block.Inscription.Champs": "Gracias por rellenar todos los campos requeridos",
+	"date.from": "del",
+	"date.to": "al",
+	"Block.Inscription.Valider": "Inscribirse",
+	"Block.Actus.ReadMore": "Leer también :",
+	"Block.Inscription.Fiche.Service": "Ficha de inscripción en el servicio",
+	"Go.NFGWebsite": "",
+	"Block.Calendar.Passee": "Propuesta pasada",
+	"Block.Inscription.Formulaire.Complement": "",
+	"Block.Dons.Fini": "",
+	"Block.Dons.Website": "",
+	"Block.Inscription.Civilite": "",
+	"Block.Inscription.Paf.paypal": "",
+	"Block.Dons.Search.More": "",
+	"Block.Dons.Search.Less": "",
+	"Block.Calendar.Place": "",
+	"Block.Inscription.Paiment": "",
+	"Block.Dons.Success": "",
+	"Block.Inscription.Formulaire": "Para continuar su solicitud, le pedimos que complete el siguiente documento",
+	"Demande_De_Reservation": "Solicitud de reserva",
+	"Arrivee": "llegada",
+	"Depart": "Partida",
+	"Groupe_Adultes_Nombre": "Para un grupo de adultos (número previsto)",
+	"Groupe_Jeunes_Nombre": "Para un grupo de jóvenes (número previsto)",
+	"Individuel_Nombre": "Venir en persona",
+	"Objet_Demande": "Especifique, en pocas palabras, el propósito de su solicitud",
+	"Block.Inscription.Formulaire.Fin": "Para continuar su solicitud, le pedimos que complete el siguiente documento y lo envíe (preferiblemente por correo de retorno) a la secretaría indicada en el correo que le será enviado",
+	"Découvrir la revue FOI": "",
+	"Block.Paiement.Acces": "",
+	"ccn": "",
+	"Time.de": ""
+}
