--- a/theme/cte/localization/hu/Texts.json
+++ b/theme/cte/localization/hu/Texts.json
@@ -1,1 +1,172 @@
-{"Dons.Projet":"Projekttípus","Dons.Finance":"A projekt finanszírozottsága: %pourcentage%%","Dons.Soutien":"Támogatom az alábbi projektet","Dons.Recap":"A következő összeget adományozom","Block.Dons.Donner":"","Block.Dons.Titre":"Adomány","Block.Dons.Condition":"Adomány feltétele","Block.Dons.Montant":"Adomány összeg","Block.Dons.Mensuel":"","Block.Dons.Mois":"","Block.Dons.Trimestre":"","Block.Dons.Trimestriel":"","Block.Dons.Cout":"","Block.Dons.Message":"","Block.Dons.ContactNational":"Pénzügyekért és adminisztrációért felelős személy (Magyarország)","PresDeChezToi.Titre":"","PresDeChezToi.Propositions":"","PresDeChezToi.Recherche":"","PresDeChezToi.Tous.Lieux":"","PresDeChezToi.Tous.Prop":"","PresDeChezToi.Tous.Rencontres":"","Inscriptions":"Jelentkezés","Block.Inscription.Lui":"Férj","Block.Inscription.Civilite.Monsieur":"","Block.Inscription.Civilite.Madame":"","Block.Inscription.Civilite.MonsieurOuMadame":"","Block.Inscription.Civilite.Mademoiselle":"","Block.Inscription.Civilite.Pere":"","Block.Inscription.Civilite.Soeur":"","Block.Inscription.Civilite.Frere":"","Block.Inscription.Elle":"Feleség","Block.Inscription.Enfants":"Gyermekek","Block.Inscription.Enfant":"Gyermek","Block.Inscription.Enfant.Supprimer":"Törlés","Block.Inscription.Enfant.Ajouter":"Gyerek hozzáadása","Block.Inscription.Enfant.Fille":"Lány","Block.Inscription.Enfant.Garçon":"Fiú","Block.Inscription.Couple":"A házaspár","Block.Inscription.VoirPlan":"Térkép","Block.Inscription.Statut.Libre":"Nyitott alkalom, jelentkezés nem szükséges","Block.Inscription.Statut.Close":"Jelentkezés zárva","Block.Inscription.Statut.Ouvertes":"Jelentkezés nyitva","Block.Inscription.Statut.Preinscription":"Előzetes jelentkezés","Block.Inscription.Statut.Non":"Nincs jelentkezés","Block.Inscription.Statut.Septembre":"Jelentkezés szeptember közepétől","adolescent":"14-18 éves fiatal","jeune-adulte":"18-30 éves fiatal","couple":"Házaspár","famille":"Család","personne-avec-enfants":"Személy gyerekekkel","fiances":"Jegyespárok","adulte":"Egyéni","pretre":"Pap","Block.Inscription.Attente.Ligne1":"A választott program betelt.","Block.Inscription.Attente.Ligne2":"Várólistára lehet feliratkozni a JELENTKEZÉS gombra kattintva.","Block.Inscription.Attente.Ligne3":"Az előleget csak a jelentkezés megerősítése után kérjük.","Block.Inscription.Passee":"Elmúlt esemény","Block.Inscription.Fiche":"Jelentkezési lap","Block.Inscription.InfosPerso":"Személyes adatok","Block.Inscription.Societe":"","Block.Inscription.Nom":"Név","Block.Inscription.Nom.Different":"Név (ha különbözik)","Block.Inscription.Prenom":"Keresztnév","Block.Inscription.DateNaiss":"Születési ideje","Block.Inscription.DateFormat":"nap\/hó\/éééé","Block.Inscription.Sexe":"Nem","Block.Inscription.Sexe.H":"F","Block.Inscription.Sexe.F":"N","Block.Inscription.Nationalite":"Nemzetiség","Block.Inscription.Adresse":"Cím","Block.Inscription.CodePostal":"Irányítószám","Block.Inscription.Ville":"Város","Block.Inscription.Pays":"Ország","Block.Inscription.Classe":"Osztály\/Szak","Block.Inscription.Situation":"Állapot","Block.Inscription.Situation.Etudiant":"Diák","Block.Inscription.Situation.JPro":"Fiatal pályakezdő","Block.Inscription.Situation.Autre":"Egyéb","Block.Inscription.Profession":"Foglalkozás","Block.Inscription.Contact":"Kapcsolat","Block.Inscription.Email":"E-mail cim","Block.Inscription.Email.Verification":"E-mail (ismét)","Block.Inscription.Email.Error.Different":"A két e-mail cím nem egyezik.","Block.Inscription.Email.Parent":"Egyik szülő e-mailje","Block.Inscription.Email.Parent.Verification":"Egyik szülő e-mailje (megerősítés)","Block.Inscription.Telephone":"Telefonszám","Block.Inscription.Telephone.Placeholder":"","Block.Inscription.Telephone.Fixe":"Vezetékes telefonszám","Block.Inscription.Telephone.Portable":"Mobil telefonszám","Block.Inscription.Telephone.Portable.Parents":"A szülők vezetékes (vagy mobil) telefonszáma","Block.Inscription.Telephone.Condition":"Legalább az egyik telefonszám szükséges","Block.Inscription.Telephone.Condition.Ados":"Az egyik szülő vezetékes, vagy mobiltelefonszáma szükséges","Block.Inscription.Remarques":"Megjegyzések","Block.Inscription.Connu":"A honlapot… keresztül ismertem meg :","Block.Inscription.Connu.Internet":"Internet","Block.Inscription.Connu.Tracts":"Szórólapok","Block.Inscription.Connu.Famille":"Család\/barátok","Block.Inscription.SituationConjugale":"Házasság helyzete:","Block.Inscription.SituationConjugale.Maries":"Házasok","Block.Inscription.SituationConjugale.Fiances":"Jegyesek","Block.Inscription.SituationConjugale.Autre":"Egyéb","Block.Inscription.SituationConjugale.Preciser":"Pontosítás","Block.Inscription.Mariage":"Esküvő időpontja","Block.Inscription.Mariage.Fiances":"Az esküvő időpontja, amennyiben már ki van tűzve","Block.Inscription.Fiances":"Esküvő tervben","Block.Inscription.Inscrire.Service":"Szolgálatba jönni","Block.Inscription.Paf":"Részvételi hozzájárulás:","Block.Inscription.Paf.Problemes":"A pénz ne legyen akadálya a részvételnek!","Block.Inscription.Paf.Montant":"","Block.Inscription.Paf.Maintenant":"","Block.Inscription.Paf.Maintenant.Rien":"","Block.Inscription.Paf.Maintenant.Totalite":"","Block.Inscription.Paf.Maintenant.Partie":"","Block.Inscription.Paf.ModePaiment":"","Block.Inscription.Paf.carte":"kártyás fizetés","Block.Inscription.Paf.cheque":"csekkes fizetés","Block.Inscription.Paf.virement":"átutalás","Block.Inscription.Paf.Virement.Period":"rendszeres átutalás","Block.Inscription.Paf.Prelevement":"állandó beszedési megbízás","Block.Inscription.Paf.Liquide":"","Block.Inscription.Entretien":"A jelentkezés megerősítéséhez személyes beszélgetés szükséges.","Block.Inscription.Motivation":"A jelentkezéshez motivációs levél is szükséges.","Block.Inscription.Formulaire_":"Ahhoz, hogy jelentkezése érvényes legyen, kérjük, nyomtassa ki, töltse ki kézzel, és küldje el a titkárság alábbi címére a kiegészítő adatlapot.","Block.Inscription.FormulaireEtMotiv":"Ahhoz, hogy jelentkezése teljes legyen, kérjük írjon egy motivációs levelet, nyomtassa ki, töltse ki kézzel az alábbi kiegészítő adatlapot, és a két dokumentumot küldje el a titkárság alábbi címére.","Block.Inscription.Succes":"Jelentkezését rögzítettük","Block.Inscription.PaimentComplementaire":"","Block.Inscription.PaimentComplementaire.Intro":"","Block.Inscription.PaimentComplementaire.Email":"","Block.Inscription.PaimentComplementaire.Email.Aucun":"","Block.Inscription.PaimentComplementaire.Email.Autre":"","Block.Inscription.Numero":"","Block.PaimentComplementaire.MontantPaye":"","Block.PaimentComplementaire.MontantAPayer":"","Block.PaimentComplementaire.Paf":"","Block.Paiment":"Fizetés módja","Calendrier":"Eseménynaptár","Date":"Dátum","Proposition":"Program","Block.Inscription.Inscrire.Comme":"Adatlap","Block.Inscription.Champs":"* Kérjük, minden szükséges mezőt töltsön ki!","date.from":" ","date.to":"-","Block.Inscription.Valider":"Jelentkezés","Block.Actus.ReadMore":"További hírek","Block.Inscription.Fiche.Service":"Jelentkezési lap","Go.NFGWebsite":"","Block.Calendar.Passee":"Elmúlt esemény","Block.Inscription.Formulaire.Complement":"","Block.Dons.Fini":"","Block.Dons.Website":"","Block.Inscription.Civilite":"","Block.Inscription.Paf.paypal":"","Block.Dons.Search.More":"","Block.Dons.Search.Less":"","Block.Calendar.Place":"","Block.Inscription.Paiment":"","Block.Dons.Success":"","Block.Inscription.Formulaire":"A kérés folytatása érdekében kérjük, töltse ki a következő dokumentumot","Merci de nous retourner ce document, soit par mail (sessions@chemin-neuf.org), soit par la Poste ...":"Köszönjük, hogy ezt a dokumentumot elküldte, postai úton (%mail_inscription%) vagy a Posta (%adresse_postale_inscription%).","Demande_De_Reservation":"Foglalási kérelem","Arrivee":"Érkezés dátuma","Depart":"Távozás dátuma","Groupe_Adultes_Nombre":"Vendégek száma","Groupe_Jeunes_Nombre":"A fiatalok egy csoportja számára (tervezett szám)","Individuel_Nombre":"Egyedül jönni","Objet_Demande":"Adja meg néhány szóval az alkalmazásának célját","Message":"Üzenet","Nombre_Chambres":"Igényelt szobák száma","Blocks.Contact.Input.Submit.Label":"Küldés","Block.Actus.Publier":"Közzétételre "} 
+{
+	"Dons.Projet": "Projekttípus",
+	"Dons.Finance": "A projekt finanszírozottsága: %pourcentage%%",
+	"Dons.Soutien": "Támogatom az alábbi projektet",
+	"Dons.Recap": "A következő összeget adományozom",
+	"Block.Dons.Donner": "",
+	"Block.Dons.Titre": "Adomány",
+	"Block.Dons.Condition": "Adomány feltétele",
+	"Block.Dons.Montant": "Adomány összeg",
+	"Block.Dons.Mensuel": "",
+	"Block.Dons.Mois": "",
+	"Block.Dons.Trimestre": "",
+	"Block.Dons.Trimestriel": "",
+	"Block.Dons.Cout": "",
+	"Block.Dons.Message": "",
+	"Block.Dons.ContactNational": "Pénzügyekért és adminisztrációért felelős személy (Magyarország)",
+	"PresDeChezToi.Titre": "",
+	"PresDeChezToi.Propositions": "",
+	"PresDeChezToi.Recherche": "",
+	"PresDeChezToi.Tous.Lieux": "",
+	"PresDeChezToi.Tous.Prop": "",
+	"PresDeChezToi.Tous.Rencontres": "",
+	"Inscriptions": "Jelentkezés",
+	"Block.Inscription.Lui": "Férj",
+	"Block.Inscription.Civilite.Monsieur": "",
+	"Block.Inscription.Civilite.Madame": "",
+	"Block.Inscription.Civilite.MonsieurOuMadame": "",
+	"Block.Inscription.Civilite.Mademoiselle": "",
+	"Block.Inscription.Civilite.Pere": "",
+	"Block.Inscription.Civilite.Soeur": "",
+	"Block.Inscription.Civilite.Frere": "",
+	"Block.Inscription.Elle": "Feleség",
+	"Block.Inscription.Enfants": "Gyermekek",
+	"Block.Inscription.Enfant": "Gyermek",
+	"Block.Inscription.Enfant.Supprimer": "Törlés",
+	"Block.Inscription.Enfant.Ajouter": "Gyerek hozzáadása",
+	"Block.Inscription.Enfant.Fille": "Lány",
+	"Block.Inscription.Enfant.Garçon": "Fiú",
+	"Block.Inscription.Couple": "A házaspár",
+	"Block.Inscription.VoirPlan": "Térkép",
+	"Block.Inscription.Statut.Libre": "Nyitott alkalom, jelentkezés nem szükséges",
+	"Block.Inscription.Statut.Close": "Jelentkezés zárva",
+	"Block.Inscription.Statut.Ouvertes": "Jelentkezés nyitva",
+	"Block.Inscription.Statut.Preinscription": "Előzetes jelentkezés",
+	"Block.Inscription.Statut.Non": "Nincs jelentkezés",
+	"Block.Inscription.Statut.Septembre": "Jelentkezés szeptember közepétől",
+	"adolescent": "14-18 éves fiatal",
+	"jeune-adulte": "18-30 éves fiatal",
+	"couple": "Házaspár",
+	"famille": "Család",
+	"personne-avec-enfants": "Személy gyerekekkel",
+	"fiances": "Jegyespárok",
+	"adulte": "Egyéni",
+	"pretre": "Pap",
+	"Block.Inscription.Attente.Ligne1": "A választott program betelt.",
+	"Block.Inscription.Attente.Ligne2": "Várólistára lehet feliratkozni a JELENTKEZÉS gombra kattintva.",
+	"Block.Inscription.Attente.Ligne3": "Az előleget csak a jelentkezés megerősítése után kérjük.",
+	"Block.Inscription.Passee": "Elmúlt esemény",
+	"Block.Inscription.Fiche": "Jelentkezési lap",
+	"Block.Inscription.InfosPerso": "Személyes adatok",
+	"Block.Inscription.Societe": "",
+	"Block.Inscription.Nom": "Név",
+	"Block.Inscription.Nom.Different": "Név (ha különbözik)",
+	"Block.Inscription.Prenom": "Keresztnév",
+	"Block.Inscription.DateNaiss": "Születési ideje",
+	"Block.Inscription.DateFormat": "nap/hó/éééé",
+	"Block.Inscription.Sexe": "Nem",
+	"Block.Inscription.Sexe.H": "F",
+	"Block.Inscription.Sexe.F": "N",
+	"Block.Inscription.Nationalite": "Nemzetiség",
+	"Block.Inscription.Adresse": "Cím",
+	"Block.Inscription.CodePostal": "Irányítószám",
+	"Block.Inscription.Ville": "Város",
+	"Block.Inscription.Pays": "Ország",
+	"Block.Inscription.Classe": "Osztály/Szak",
+	"Block.Inscription.Situation": "Állapot",
+	"Block.Inscription.Situation.Etudiant": "Diák",
+	"Block.Inscription.Situation.JPro": "Fiatal pályakezdő",
+	"Block.Inscription.Situation.Autre": "Egyéb",
+	"Block.Inscription.Profession": "Foglalkozás",
+	"Block.Inscription.Contact": "Kapcsolat",
+	"Block.Inscription.Email": "E-mail",
+	"Block.Inscription.Email.Verification": "E-mail (ismét)",
+	"Block.Inscription.Email.Error.Different": "A két e-mail cím nem egyezik.",
+	"Block.Inscription.Email.Parent": "Egyik szülő e-mailje",
+	"Block.Inscription.Email.Parent.Verification": "Egyik szülő e-mailje (megerősítés)",
+	"Block.Inscription.Telephone": "Telefonszám",
+	"Block.Inscription.Telephone.Placeholder": "",
+	"Block.Inscription.Telephone.Fixe": "Vezetékes telefonszám",
+	"Block.Inscription.Telephone.Portable": "Mobil telefonszám",
+	"Block.Inscription.Telephone.Portable.Parents": "A szülők vezetékes (vagy mobil) telefonszáma",
+	"Block.Inscription.Telephone.Condition": "Legalább az egyik telefonszám szükséges",
+	"Block.Inscription.Telephone.Condition.Ados": "Az egyik szülő vezetékes, vagy mobiltelefonszáma szükséges",
+	"Block.Inscription.Remarques": "Megjegyzések",
+	"Block.Inscription.Connu": "A honlapot… keresztül ismertem meg :",
+	"Block.Inscription.Connu.Internet": "Internet",
+	"Block.Inscription.Connu.Tracts": "Szórólapok",
+	"Block.Inscription.Connu.Famille": "Család/barátok",
+	"Block.Inscription.SituationConjugale": "Házasság helyzete:",
+	"Block.Inscription.SituationConjugale.Maries": "Házasok",
+	"Block.Inscription.SituationConjugale.Fiances": "Jegyesek",
+	"Block.Inscription.SituationConjugale.Autre": "Egyéb",
+	"Block.Inscription.SituationConjugale.Preciser": "Pontosítás",
+	"Block.Inscription.Mariage": "Esküvő időpontja",
+	"Block.Inscription.Mariage.Fiances": "Az esküvő időpontja, amennyiben már ki van tűzve",
+	"Block.Inscription.Fiances": "Esküvő tervben",
+	"Block.Inscription.Inscrire.Service": "Szolgálatba jönni",
+	"Block.Inscription.Paf": "Részvételi hozzájárulás:",
+	"Block.Inscription.Paf.Problemes": "A pénz ne legyen akadálya a részvételnek!",
+	"Block.Inscription.Paf.Montant": "",
+	"Block.Inscription.Paf.Maintenant": "",
+	"Block.Inscription.Paf.Maintenant.Rien": "",
+	"Block.Inscription.Paf.Maintenant.Totalite": "",
+	"Block.Inscription.Paf.Maintenant.Partie": "",
+	"Block.Inscription.Paf.ModePaiment": "",
+	"Block.Inscription.Paf.carte": "kártyás fizetés",
+	"Block.Inscription.Paf.cheque": "csekkes fizetés",
+	"Block.Inscription.Paf.virement": "átutalás",
+	"Block.Inscription.Paf.Virement.Period": "rendszeres átutalás",
+	"Block.Inscription.Paf.Prelevement": "állandó beszedési megbízás",
+	"Block.Inscription.Paf.Liquide": "",
+	"Block.Inscription.Entretien": "A jelentkezés megerősítéséhez személyes beszélgetés szükséges.",
+	"Block.Inscription.Motivation": "A jelentkezéshez motivációs levél is szükséges.",
+	"Block.Inscription.Formulaire_": "Ahhoz, hogy jelentkezése érvényes legyen, kérjük, nyomtassa ki, töltse ki kézzel, és küldje el a titkárság alábbi címére a kiegészítő adatlapot.",
+	"Block.Inscription.FormulaireEtMotiv": "Ahhoz, hogy jelentkezése teljes legyen, kérjük írjon egy motivációs levelet, nyomtassa ki, töltse ki kézzel az alábbi kiegészítő adatlapot, és a két dokumentumot küldje el a titkárság alábbi címére.",
+	"Block.Inscription.Succes": "Jelentkezését rögzítettük",
+	"Block.Inscription.PaimentComplementaire": "",
+	"Block.Inscription.PaimentComplementaire.Intro": "",
+	"Block.Inscription.PaimentComplementaire.Email": "",
+	"Block.Inscription.PaimentComplementaire.Email.Aucun": "",
+	"Block.Inscription.PaimentComplementaire.Email.Autre": "",
+	"Block.Inscription.Numero": "",
+	"Block.PaimentComplementaire.MontantPaye": "",
+	"Block.PaimentComplementaire.MontantAPayer": "",
+	"Block.PaimentComplementaire.Paf": "",
+	"Block.Paiment": "Fizetés módja",
+	"Calendrier": "Eseménynaptár",
+	"Date": "Dátum",
+	"Proposition": "Program",
+	"Block.Inscription.Inscrire.Comme": "Adatlap",
+	"Block.Inscription.Champs": "* Kérjük, minden szükséges mezőt töltsön ki!",
+	"date.from": " ",
+	"date.to": "-",
+	"Block.Inscription.Valider": "Jelentkezés",
+	"Block.Actus.ReadMore": "További hírek",
+	"Block.Inscription.Fiche.Service": "Jelentkezési lap",
+	"Go.NFGWebsite": "",
+	"Block.Calendar.Passee": "Elmúlt esemény",
+	"Block.Inscription.Formulaire.Complement": "",
+	"Block.Dons.Fini": "",
+	"Block.Dons.Website": "",
+	"Block.Inscription.Civilite": "",
+	"Block.Inscription.Paf.paypal": "",
+	"Block.Dons.Search.More": "",
+	"Block.Dons.Search.Less": "",
+	"Block.Calendar.Place": "",
+	"Block.Inscription.Paiment": "",
+	"Block.Dons.Success": "",
+	"Block.Inscription.Formulaire": "A kérés folytatása érdekében kérjük, töltse ki a következő dokumentumot",
+	"Demande_De_Reservation": "Foglalási kérelem",
+	"Arrivee": "Erkezés",
+	"Depart": "Indulás",
+	"Groupe_Adultes_Nombre": "Felnőttek egy csoportja számára (tervezett szám)",
+	"Groupe_Jeunes_Nombre": "A fiatalok egy csoportja számára (tervezett szám)",
+	"Individuel_Nombre": "Egyedül jönni",
+	"Objet_Demande": "Adja meg néhány szóval az alkalmazásának célját",
+	"Block.Inscription.Formulaire.Fin": "A kérés folytatása érdekében kérjük, töltse ki az alábbi dokumentumot, és küldje el (lehetőleg postai úton) a titkárságnak, amelyet az Önnek küldött levélben jelez",
+	"Découvrir la revue FOI": "",
+	"Block.Paiement.Acces": "",
+	"ccn": "",
+	"Time.de": ""
+}
