--- a/theme/cte/localization/it/Texts.json
+++ b/theme/cte/localization/it/Texts.json
@@ -1,1 +1,172 @@
-{"Dons.Projet":"Tipo di progetto","Dons.Finance":"Progetto finanziato a %pourcentage%%","Dons.Soutien":"Io sostengo il progetto","Dons.Recap":"Io faccio una donazione di","Block.Dons.Donner":"Donare","Block.Dons.Titre":"La mia donazione","Block.Dons.Condition":"Condizione della mia donazione","Block.Dons.Montant":"Cifra della mia donazione","Block.Dons.Mensuel":"Donazione mensile","Block.Dons.Mois":"","Block.Dons.Trimestre":"","Block.Dons.Trimestriel":"Donazione trimestrale","Block.Dons.Cout":"La vostra donazione vi costerà solo","Block.Dons.Message":"Desidero allegare un messaggio alla mia donazione","Block.Dons.ContactNational":"Contatto amministrativo e fiscale nel vostro paese","PresDeChezToi.Titre":"","PresDeChezToi.Propositions":"","PresDeChezToi.Recherche":"","PresDeChezToi.Tous.Lieux":"","PresDeChezToi.Tous.Prop":"","PresDeChezToi.Tous.Rencontres":"","Inscriptions":"Iscrizioni","Block.Inscription.Lui":"Lui","Block.Inscription.Civilite.Monsieur":"","Block.Inscription.Civilite.Madame":"","Block.Inscription.Civilite.MonsieurOuMadame":"","Block.Inscription.Civilite.Mademoiselle":"","Block.Inscription.Civilite.Pere":"","Block.Inscription.Civilite.Soeur":"","Block.Inscription.Civilite.Frere":"","Block.Inscription.Elle":"Lei","Block.Inscription.Enfants":"Bambini","Block.Inscription.Enfant":"Bambino","Block.Inscription.Enfant.Supprimer":"","Block.Inscription.Enfant.Ajouter":"Aggiungere un bambino","Block.Inscription.Enfant.Fille":"Ragazza","Block.Inscription.Enfant.Garçon":"Ragazzo","Block.Inscription.Couple":"Coppia","Block.Inscription.VoirPlan":"Vedere la mappa","Block.Inscription.Statut.Libre":"Entrata libera, iscrizione non necessaria","Block.Inscription.Statut.Close":"Iscrizioni chiuse","Block.Inscription.Statut.Ouvertes":"Iscrizioni aperte","Block.Inscription.Statut.Preinscription":"Preiscrizione","Block.Inscription.Statut.Non":"","Block.Inscription.Statut.Septembre":"Iscrizioni aperte da metà ottobre","Block.Inscription.Statut.Attente":"Iscrizioni in lista d'attesa","adolescent":"Giovane 14-18 anni","jeune-adulte":"Giovane 18-30 anni","couple":"Coppia","famille":"Famiglia\n","personne-avec-enfants":"Persona con figli","fiances":"Fidanzati","adulte":"Singolo","pretre":"Sacerdote","Block.Inscription.Attente.Ligne1":"La proposta scelta è esaurita","Block.Inscription.Attente.Ligne2":"Vi potete iscrivere sulla lista d’attesa.","Block.Inscription.Attente.Ligne3":"La quota di iscrizione sarà richiesta alla conferma della vostra iscrizione.","Block.Inscription.Passee":"Proposta scaduta","Block.Inscription.Fiche":"Scheda d’iscrizione","Block.Inscription.InfosPerso":"Informazioni personali","Block.Inscription.Societe":"Società o organizzazione","Block.Inscription.Nom":"Cognome\n","Block.Inscription.Nom.Different":"Cognome","Block.Inscription.Prenom":"Nome","Block.Inscription.DateNaiss":"Data di nascita","Block.Inscription.DateFormat":"gg\/mm\/aaaa","Block.Inscription.Sexe":"Sesso","Block.Inscription.Sexe.H":"M","Block.Inscription.Sexe.F":"F","Block.Inscription.Nationalite":"Nazionalità","Block.Inscription.Adresse":"Indirizzo","Block.Inscription.CodePostal":"CAP","Block.Inscription.Ville":"Città","Block.Inscription.Pays":"Paese","Block.Inscription.Classe":"Classe\/Studi","Block.Inscription.Situation":"Situazione","Block.Inscription.Situation.Etudiant":"Studente","Block.Inscription.Situation.JPro":"Giovane professionista","Block.Inscription.Situation.Autre":"Altro","Block.Inscription.Profession":"Professione","Block.Inscription.Contact":"Contatto","Block.Inscription.Email":"Mail","Block.Inscription.Email.Verification":"Mail (conferma)","Block.Inscription.Email.Error.Different":"Problema mail : diversa dalla prima mail immessa","Block.Inscription.Email.Parent":"Email di un genitore","Block.Inscription.Email.Parent.Verification":"Email di un genitore (conferma)","Block.Inscription.Telephone":"Telefono","Block.Inscription.Telephone.Placeholder":"+39\/x xx xx xx xx","Block.Inscription.Telephone.Fixe":"Telefono","Block.Inscription.Telephone.Portable":"Cellulare","Block.Inscription.Telephone.Portable.Parents":"Cellulare di uno dei genitori","Block.Inscription.Telephone.Condition":"È necessario uno dei telefoni","Block.Inscription.Telephone.Condition.Ados":"È necessario il telefono o il cellulare di uno dei genitori","Block.Inscription.Remarques":"Note","Block.Inscription.Connu":"Ho conosciuto il sito tramite","Block.Inscription.Connu.Internet":"Internet","Block.Inscription.Connu.Tracts":"Volantini","Block.Inscription.Connu.Famille":"Famiglia\/amici","Block.Inscription.SituationConjugale":"Stato coniugale :","Block.Inscription.SituationConjugale.Maries":"Coniugati","Block.Inscription.SituationConjugale.Fiances":"Fidanzati","Block.Inscription.SituationConjugale.Autre":"Altro","Block.Inscription.SituationConjugale.Preciser":"Precisare","Block.Inscription.Mariage":"Data di matrimonio","Block.Inscription.Mariage.Fiances":"Data di matrimonio se la conoscete :","Block.Inscription.Fiances":"Progetto di matrimonio","Block.Inscription.Inscrire.Service":"Iscriversi al servizio","Block.Inscription.Paf":"La partecipazione alle spese richiesta per questa proposta è la seguente :","Block.Inscription.Paf.Problemes":"Il denaro non deve essere un ostacolo","Block.Inscription.Paf.Montant":"Ho intenzione di pagare l’importo seguente :","Block.Inscription.Paf.Maintenant":"Pago adesso","Block.Inscription.Paf.Maintenant.Rien":"Niente per adesso","Block.Inscription.Paf.Maintenant.Totalite":"La spesa totale","Block.Inscription.Paf.Maintenant.Partie":"Una parte delle spese","Block.Inscription.Paf.ModePaiment":"Metodo di pagamento","Block.Inscription.Paf.carte":"con carta","Block.Inscription.Paf.cheque":"con assegno","Block.Inscription.Paf.virement":"con bonifico","Block.Inscription.Paf.Virement.Period":"con bonifico periodico","Block.Inscription.Paf.Prelevement":"con prelievo automatico","Block.Inscription.Paf.Liquide":"con deposito di contanti","Block.Inscription.Entretien":"Per confermare la vostra iscrizione sarà necessario un colloquio.","Block.Inscription.Motivation":"Affinché l’iscrizione sia completa, siete pregati di spedire una lettera di motivazione all’indirizzo della segreteria indicato qui sopra.","Block.Inscription.Formulaire_":"Affichè la vostra iscrizione sia completa, stampare e compilare a mano il seguente modulo e spedirlo all’indirizzo della segreteria qui sopra indicata.","Block.Inscription.FormulaireEtMotiv":"Affichè la vostra iscrizione sia completa, scrivere una lettera di motivazione, stampare e compilare a mano il seguente modulo e spedire questi due documenti all’indirizzo della segreteria qui sopra indicata.","Block.Inscription.Succes":"La sua iscrizione è stata presa in carico.","Block.Inscription.PaimentComplementaire":"Pagamento complementare","Block.Inscription.PaimentComplementaire.Intro":"Per pagare il saldo per questa proposta dovete essere già iscritti.","Block.Inscription.PaimentComplementaire.Email":"Digitate il vostro indirizzo email :","Block.Inscription.PaimentComplementaire.Email.Aucun":"Ci scusiamo, Non troviamo nessuna iscrizione a questa proposta corrispondente all’indirizzo email seguente :","Block.Inscription.PaimentComplementaire.Email.Autre":"Provare con un altro indirizzo email","Block.Inscription.Numero":"","Block.PaimentComplementaire.MontantPaye":"Durante la vostra iscrizione online, voi avete pagato la seguente cifra :","Block.PaimentComplementaire.MontantAPayer":"Durante la vostra iscrizione online, voi avete indicato che preferivate pagare il totale del seguente importo :","Block.PaimentComplementaire.Paf":"La partecipazione alle spese richiesta per questa proposta è la seguente :","Block.Paiment":"Il mio pagamento","Calendrier":"Calendario","Date":"Data","Proposition":"Proposta","Block.Inscription.Inscrire.Comme":"Iscriversi come","Block.Inscription.Champs":"Compilare tutti i campi obbligatorii","date.from":"dal","date.to":"al","Block.Inscription.Valider":"Iscriversi","Block.Actus.ReadMore":"Legate anche...","Block.Inscription.Fiche.Service":"Scheda d’iscrizione al servizio","Go.NFGWebsite":"","Block.Calendar.Passee":"Proposta scaduta","Block.Inscription.Formulaire.Complement":"","Block.Dons.Fini":"Progetto finanziato","Block.Dons.Website":"","Block.Inscription.Civilite":"","Block.Inscription.Paf.paypal":"","Block.Dons.Search.More":"","Block.Dons.Search.Less":"","Block.Calendar.Place":"Luogo","Block.Inscription.Paiment":"","Block.Dons.Success":"","Block.Inscription.Formulaire":"Per continuare la tua richiesta, ti chiediamo di completare il seguente documento","Merci de nous retourner ce document, soit par mail (sessions@chemin-neuf.org), soit par la Poste ...":"Grazie per aver restituito questo documento, via mail (%mail_inscription%) o dall'ufficio postale (%adresse_postale_inscription%).","Demande_De_Reservation":"Richiesta di prenotazione","Arrivee":"Arrivo","Depart":"Partenza","Groupe_Adultes_Nombre":"Per un gruppo di adulti (numero previsto)","Groupe_Jeunes_Nombre":"Per un gruppo di giovani (numero previsto)","Individuel_Nombre":"Venire in individuale","Objet_Demande":"Specificare, in poche parole, lo scopo della tua applicazione","Block.Inscription.Success":"La sua iscrizione è avvenuta con successo. Grazie e a presto!","Block.Actus.Publier":"Pubblicato il "}
+{
+	"Dons.Projet": "Tipo di progetto",
+	"Dons.Finance": "Progetto finanziato a %pourcentage%%",
+	"Dons.Soutien": "Io sostengo il progetto",
+	"Dons.Recap": "Io faccio una donazione di",
+	"Block.Dons.Donner": "Donare",
+	"Block.Dons.Titre": "La mia donazione",
+	"Block.Dons.Condition": "Condizione della mia donazione",
+	"Block.Dons.Montant": "Cifra della mia donazione",
+	"Block.Dons.Mensuel": "Donazione mensile",
+	"Block.Dons.Mois": "",
+	"Block.Dons.Trimestre": "",
+	"Block.Dons.Trimestriel": "Donazione trimestrale",
+	"Block.Dons.Cout": "La vostra donazione vi costerà solo",
+	"Block.Dons.Message": "Desidero allegare un messaggio alla mia donazione",
+	"Block.Dons.ContactNational": "Contatto amministrativo e fiscale nel vostro paese",
+	"PresDeChezToi.Titre": "",
+	"PresDeChezToi.Propositions": "",
+	"PresDeChezToi.Recherche": "",
+	"PresDeChezToi.Tous.Lieux": "",
+	"PresDeChezToi.Tous.Prop": "",
+	"PresDeChezToi.Tous.Rencontres": "",
+	"Inscriptions": "Iscrizioni",
+	"Block.Inscription.Lui": "Lui",
+	"Block.Inscription.Civilite.Monsieur": "",
+	"Block.Inscription.Civilite.Madame": "",
+	"Block.Inscription.Civilite.MonsieurOuMadame": "",
+	"Block.Inscription.Civilite.Mademoiselle": "",
+	"Block.Inscription.Civilite.Pere": "",
+	"Block.Inscription.Civilite.Soeur": "",
+	"Block.Inscription.Civilite.Frere": "",
+	"Block.Inscription.Elle": "Lei",
+	"Block.Inscription.Enfants": "Bambini",
+	"Block.Inscription.Enfant": "Bambino",
+	"Block.Inscription.Enfant.Supprimer": "",
+	"Block.Inscription.Enfant.Ajouter": "Aggiungere un bambino",
+	"Block.Inscription.Enfant.Fille": "Ragazza",
+	"Block.Inscription.Enfant.Garçon": "Ragazzo",
+	"Block.Inscription.Couple": "Coppia",
+	"Block.Inscription.VoirPlan": "Vedere la mappa",
+	"Block.Inscription.Statut.Libre": "Entrata libera, iscrizione non necessaria",
+	"Block.Inscription.Statut.Close": "Iscrizioni chiuse",
+	"Block.Inscription.Statut.Ouvertes": "Iscrizioni aperte",
+	"Block.Inscription.Statut.Preinscription": "Preiscrizione",
+	"Block.Inscription.Statut.Non": "",
+	"Block.Inscription.Statut.Septembre": "Iscrizioni aperte da metà ottobre",
+	"adolescent": "Giovane 14-18 anni",
+	"jeune-adulte": "Giovane 18-30 anni",
+	"couple": "Coppia",
+	"famille": "Famiglia\n",
+	"personne-avec-enfants": "Persona con figli",
+	"fiances": "Fidanzati",
+	"adulte": "Singolo",
+	"pretre": "Sacerdote",
+	"Block.Inscription.Attente.Ligne1": "La proposta scelta è esaurita",
+	"Block.Inscription.Attente.Ligne2": "Vi potete iscrivere sulla lista d’attesa.",
+	"Block.Inscription.Attente.Ligne3": "La quota di iscrizione sarà richiesta alla conferma della vostra iscrizione.",
+	"Block.Inscription.Passee": "Proposta scaduta",
+	"Block.Inscription.Fiche": "Scheda d’iscrizione",
+	"Block.Inscription.InfosPerso": "Informazioni personali",
+	"Block.Inscription.Societe": "Società o organizzazione",
+	"Block.Inscription.Nom": "Cognome\n",
+	"Block.Inscription.Nom.Different": "Cognome",
+	"Block.Inscription.Prenom": "Nome",
+	"Block.Inscription.DateNaiss": "Data di nascita",
+	"Block.Inscription.DateFormat": "gg/mm/aaaa",
+	"Block.Inscription.Sexe": "Sesso",
+	"Block.Inscription.Sexe.H": "M",
+	"Block.Inscription.Sexe.F": "F",
+	"Block.Inscription.Nationalite": "Nazionalità",
+	"Block.Inscription.Adresse": "Indirizzo",
+	"Block.Inscription.CodePostal": "CAP",
+	"Block.Inscription.Ville": "Città",
+	"Block.Inscription.Pays": "Paese",
+	"Block.Inscription.Classe": "Classe/Studi",
+	"Block.Inscription.Situation": "Situazione",
+	"Block.Inscription.Situation.Etudiant": "Studente",
+	"Block.Inscription.Situation.JPro": "Giovane professionista",
+	"Block.Inscription.Situation.Autre": "Altro",
+	"Block.Inscription.Profession": "Professione",
+	"Block.Inscription.Contact": "Contatto",
+	"Block.Inscription.Email": "Mail",
+	"Block.Inscription.Email.Verification": "Mail (conferma)",
+	"Block.Inscription.Email.Error.Different": "Problema mail : diversa dalla prima mail immessa",
+	"Block.Inscription.Email.Parent": "Email di un genitore",
+	"Block.Inscription.Email.Parent.Verification": "Email di un genitore (conferma)",
+	"Block.Inscription.Telephone": "Telefono",
+	"Block.Inscription.Telephone.Placeholder": "+39/x xx xx xx xx",
+	"Block.Inscription.Telephone.Fixe": "Telefono",
+	"Block.Inscription.Telephone.Portable": "Cellulare",
+	"Block.Inscription.Telephone.Portable.Parents": "Cellulare di uno dei genitori",
+	"Block.Inscription.Telephone.Condition": "È necessario uno dei telefoni",
+	"Block.Inscription.Telephone.Condition.Ados": "È necessario il telefono o il cellulare di uno dei genitori",
+	"Block.Inscription.Remarques": "Note",
+	"Block.Inscription.Connu": "Ho conosciuto il sito tramite",
+	"Block.Inscription.Connu.Internet": "Internet",
+	"Block.Inscription.Connu.Tracts": "Volantini",
+	"Block.Inscription.Connu.Famille": "Famiglia/amici",
+	"Block.Inscription.SituationConjugale": "Stato coniugale :",
+	"Block.Inscription.SituationConjugale.Maries": "Coniugati",
+	"Block.Inscription.SituationConjugale.Fiances": "Fidanzati",
+	"Block.Inscription.SituationConjugale.Autre": "Altro",
+	"Block.Inscription.SituationConjugale.Preciser": "Precisare",
+	"Block.Inscription.Mariage": "Data di matrimonio",
+	"Block.Inscription.Mariage.Fiances": "Data di matrimonio se la conoscete :",
+	"Block.Inscription.Fiances": "Progetto di matrimonio",
+	"Block.Inscription.Inscrire.Service": "Iscriversi al servizio",
+	"Block.Inscription.Paf": "La partecipazione alle spese richiesta per questa proposta è la seguente :",
+	"Block.Inscription.Paf.Problemes": "Il denaro non deve essere un ostacolo",
+	"Block.Inscription.Paf.Montant": "Ho intenzione di pagare l’importo seguente :",
+	"Block.Inscription.Paf.Maintenant": "Pago adesso",
+	"Block.Inscription.Paf.Maintenant.Rien": "Niente per adesso",
+	"Block.Inscription.Paf.Maintenant.Totalite": "La spesa totale",
+	"Block.Inscription.Paf.Maintenant.Partie": "Una parte delle spese",
+	"Block.Inscription.Paf.ModePaiment": "Metodo di pagamento",
+	"Block.Inscription.Paf.carte": "con carta",
+	"Block.Inscription.Paf.cheque": "con assegno",
+	"Block.Inscription.Paf.virement": "con bonifico",
+	"Block.Inscription.Paf.Virement.Period": "con bonifico periodico",
+	"Block.Inscription.Paf.Prelevement": "con prelievo automatico",
+	"Block.Inscription.Paf.Liquide": "con deposito di contanti",
+	"Block.Inscription.Entretien": "Per confermare la vostra iscrizione sarà necessario un colloquio.",
+	"Block.Inscription.Motivation": "Affinché l’iscrizione sia completa, siete pregati di spedire una lettera di motivazione all’indirizzo della segreteria indicato qui sopra.",
+	"Block.Inscription.Formulaire_": "Affichè la vostra iscrizione sia completa, stampare e compilare a mano il seguente modulo e spedirlo all’indirizzo della segreteria qui sopra indicata.",
+	"Block.Inscription.FormulaireEtMotiv": "Affichè la vostra iscrizione sia completa, scrivere una lettera di motivazione, stampare e compilare a mano il seguente modulo e spedire questi due documenti all’indirizzo della segreteria qui sopra indicata.",
+	"Block.Inscription.Succes": "La sua iscrizione è stata presa in carico.",
+	"Block.Inscription.PaimentComplementaire": "Pagamento complementare",
+	"Block.Inscription.PaimentComplementaire.Intro": "Per pagare il saldo per questa proposta dovete essere già iscritti.",
+	"Block.Inscription.PaimentComplementaire.Email": "Digitate il vostro indirizzo email :",
+	"Block.Inscription.PaimentComplementaire.Email.Aucun": "Ci scusiamo, Non troviamo nessuna iscrizione a questa proposta corrispondente all’indirizzo email seguente :",
+	"Block.Inscription.PaimentComplementaire.Email.Autre": "Provare con un altro indirizzo email",
+	"Block.Inscription.Numero": "",
+	"Block.PaimentComplementaire.MontantPaye": "Durante la vostra iscrizione online, voi avete pagato la seguente cifra :",
+	"Block.PaimentComplementaire.MontantAPayer": "Durante la vostra iscrizione online, voi avete indicato che preferivate pagare il totale del seguente importo :",
+	"Block.PaimentComplementaire.Paf": "La partecipazione alle spese richiesta per questa proposta è la seguente :",
+	"Block.Paiment": "Il mio pagamento",
+	"Calendrier": "Calendario",
+	"Date": "Data",
+	"Proposition": "Proposta",
+	"Block.Inscription.Inscrire.Comme": "Iscriversi come",
+	"Block.Inscription.Champs": "Compilare tutti i campi obbligatorii",
+	"date.from": "dal",
+	"date.to": "al",
+	"Block.Inscription.Valider": "Iscriversi",
+	"Block.Actus.ReadMore": "Legate anche...",
+	"Block.Inscription.Fiche.Service": "Scheda d’iscrizione al servizio",
+	"Go.NFGWebsite": "",
+	"Block.Calendar.Passee": "Proposta scaduta",
+	"Block.Inscription.Formulaire.Complement": "",
+	"Block.Dons.Fini": "Progetto finanziato",
+	"Block.Dons.Website": "",
+	"Block.Inscription.Civilite": "",
+	"Block.Inscription.Paf.paypal": "",
+	"Block.Dons.Search.More": "",
+	"Block.Dons.Search.Less": "",
+	"Block.Calendar.Place": "Luogo",
+	"Block.Inscription.Paiment": "",
+	"Block.Dons.Success": "",
+	"Block.Inscription.Formulaire": "Per continuare la tua richiesta, ti chiediamo di completare il seguente documento",
+	"Demande_De_Reservation": "Richiesta di prenotazione",
+	"Arrivee": "Arrivo",
+	"Depart": "Partenza",
+	"Groupe_Adultes_Nombre": "Per un gruppo di adulti (numero previsto)",
+	"Groupe_Jeunes_Nombre": "Per un gruppo di giovani (numero previsto)",
+	"Individuel_Nombre": "Venire in individuale",
+	"Objet_Demande": "Specificare, in poche parole, lo scopo della tua applicazione",
+	"Block.Inscription.Formulaire.Fin": "Per continuare la vostra richiesta, ti chiediamo di compilare il seguente documento e inviarlo (preferibilmente per posta elettronica) al segretariato indicato nella mail che verrà inviata",
+	"Découvrir la revue FOI": "",
+	"Block.Paiement.Acces": "",
+	"ccn": "",
+	"Time.de": ""
+}
